[package]
description = """
A rust implementation of annoy(https://github.com/spotify/annoy) (Index serving only). Providing C api as well
"""
edition = "2021"
exclude = ["dotnet", "java", "bench", "test_gen", ".idea", ".vscode", ".github", "*.yml", "*.iml", ".gitignore"]
license = "MIT"
name = "annoy-rs"
repository = "https://github.com/hanabi1224/RuAnnoy"
version = "0.1.0"

[features]
default = ["cffi"]

bench = []
cffi = ["libc"]
simd = []

[dependencies]
cfg-if = "1"
hashbrown = "0"
lazy_static = "1"
libc = {version = "0", optional = true}
memmap2 = "0"

[dev-dependencies]
rand = "0"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[profile.release]
lto = true
opt-level = 3
overflow-checks = false

[profile.bench]
codegen-units = 1
lto = true
opt-level = 3
overflow-checks = false
