[package]
description = """
A rust implementation of annoy(https://github.com/spotify/annoy) (Index serving only). Providing C api as well
"""
edition = "2021"
exclude = ["dotnet", "java", "bench", "test_gen", ".idea", ".vscode", ".github", "*.yml", "*.iml", ".gitignore"]
license = "MIT"
name = "annoy-rs"
repository = "https://github.com/hanabi1224/RuAnnoy"
version = "0.1.0"

[workspace]
members = ["java"]

[features]
default = ["cffi"]

bench = []
cffi = ["libc"]

[dependencies]
cfg-if = "1"
memmap2 = "0.5"

libc = {version = "0.2", optional = true}

[dev-dependencies]
lazy_static = "1"
rand = "0.8"

[build-dependencies]
rustc_version = "0.4"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[profile.release]
lto = true
opt-level = 3
overflow-checks = false

[profile.bench]
codegen-units = 1
lto = true
opt-level = 3
overflow-checks = false
