[package]
description = """
A rust implementation of annoy(https://github.com/spotify/annoy) (Index serving only). C ABI is also provided.
"""
edition = "2021"
exclude = ["dotnet", "java", "bench", "test_gen", ".idea", ".vscode", ".github", "*.yml", "*.iml", ".gitignore"]
license = "MIT"
name = "annoy-rs-ffi"
repository = "https://github.com/hanabi1224/RuAnnoy"
version = "0.1.0"

publish = false

[features]
[dependencies]
annoy-rs = {path = "../"}

libc = "0.2"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[profile.release]
lto = true
opt-level = 3
overflow-checks = false

[profile.bench]
codegen-units = 1
lto = true
opt-level = 3
overflow-checks = false
