[package]
description = """
C FFI bindings to annoy-rs.
"""
edition = "2021"
license = "MIT"
name = "annoy-rs-ffi"
repository = "https://github.com/hanabi1224/RuAnnoy"
version = "0.1.0"

publish = false

[features]
[dependencies]
annoy-rs = {path = "../"}

libc = "0.2"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
overflow-checks = false
