[package]
description = """
Java bindings to annoy-rs.
"""
edition = "2021"
license = "MIT"
name = "annoy-rs-jni"
repository = "https://github.com/hanabi1224/RuAnnoy"
version = "0.1.0"

publish = false

[features]
default = []

[dependencies]
annoy-rs = {path = "../"}
jni = "0.21"
libc = "0.2"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
overflow-checks = false
